[gd_scene load_steps=12 format=3 uid="uid://dlggcpe3tfpdl"]

[ext_resource type="Script" path="res://Scenes/UI/game_over_screen.gd" id="1_3q4ly"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="2_8xu0k"]
[ext_resource type="FontFile" uid="uid://c46se1ng4idp" path="res://Assets/UI/joystix monospace.otf" id="3_hs75b"]
[ext_resource type="FontFile" uid="uid://yv0f1wvan643" path="res://Assets/UI/INVASION2000.TTF" id="4_gxl4q"]
[ext_resource type="Theme" uid="uid://ed8xs2mqvcga" path="res://Assets/UI/MenuTheme.tres" id="5_rxac7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pvhee"]
shader = ExtResource("2_8xu0k")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_l7o06"]
resource_name = "Blur"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.784314)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_5j32n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b4fm8"]
_data = {
"Blur": SubResource("Animation_l7o06"),
"RESET": SubResource("Animation_5j32n")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h7tk6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fcme8"]

[node name="GameOverScreen" type="Control" groups=["GameOverScreen"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3q4ly")

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pvhee")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b4fm8")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hs75b")
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TryAgainLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hs75b")
theme_override_font_sizes/font_size = 20
text = "Try Again?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gxl4q")
theme_override_font_sizes/font_size = 25
text = "Time: XX:XX:XX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_rxac7")
theme_override_constants/separation = 30
alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_h7tk6")
text = "  Restart  "

[node name="Main Menu" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcme8")
text = " Main Menu "

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
